# CryptoResearchAgent

./: .env.template  .gitignore  README.md  __init__.py  architecture.md  config.py  main.py  pyproject.toml  qa_inputs.txt  requirements.txt
agents/: analysis.py  anthropic_client.py  article_retrieval.py  article_writer.py  claude_agent_base.py  cloud_convert.py  coordinator.py  database_search.py  fact_checker.py  feedback_processor.py  outline_feedback.py  outline_finalizer.py  outline_generator.py  style_learning.py  summarization.py  youtube_search.py  youtube_search.py.bak  youtube_search_backup.py
docs/plans/: 2026-02-20-crypto-research-agent-improvement-design.md  2026-02-20-crypto-research-agent-improvement.md  2026-05-04-claude-subscription-refactor-design.md  2026-05-04-claude-subscription-refactor.md
input/: Substacks.csv  Substacks.csv.bak.cleaned.2026-05-06  Substacks.csv.qa-backup  Substacks.csv.template  Substacks_qa_mock.csv  Substacks_review.xlsx  YouTubes.csv  YouTubes.csv.template  writing_instructions.txt
input/writing_samples/: 003 - Token gating vs Subscription.docx  011 - Hyperliquid.docx  README.txt
scripts/: benchmark_analyzer.py  check_substacks.py  qa_full_run.py
scripts/qa_user_content_template/: my_research_note.md
src/crypto_research_agent/: cli.py  config.py
tests/: conftest.py  test_cli.py  test_config.py
utils/: article_filter.py  csv_handler.py  directory_setup.py  logger.py  retry.py  substack_api_client.py  substack_wrapper.py  token_utils.py  tweet_extractor.py  user_content_manager.py  web_scraper.py  youtube_api.py
(+90 files in other folders)
