[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-research-agent"
version = "2.0.0"
description = "Multi-agent crypto research and article generation, billed via Claude Max subscription."
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.98.0",
    "pandas>=2.2",
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "feedparser>=6.0",
    "python-dotenv>=1.0",
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "tiktoken>=0.8",
    "playwright>=1.50",
    "substack-api>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3.12",
    "responses>=0.25",
    "freezegun>=1.5",
]

[project.scripts]
crypto-research = "crypto_research_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "error::DeprecationWarning:crypto_research_agent",
    "default::DeprecationWarning",
]
